5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1674_1101.log
== TEST (2019-04-25 11:25:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", 0.44*a)
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", 0.65*a)
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", 0.55*a)
elif((b=="C") and (a>1000)):
	print("Valor total: R$", 0.60*a)
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", 0.55*a)
elif((b=="R") and (a>5000)):
	print("Valor total: R$", 0.60*a)
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:42:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2)
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2)
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2)
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2)
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2)
else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 11
    elif((b=="C") and (a<=1000)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:42:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2)
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2)
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2)
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2)
else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 13
    elif((b=="C") and (a>1000)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:42:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2))
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:43:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2))
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.217339
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2))
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:45:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2))
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:45:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (a<=500)):
	print("Valor total: R$", round((0.44*a),2))
elif((b=="R") and (a>500)):
	print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
elif((b=="C") and (a<=1000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="C") and (a>1000)):
	print("Valor total: R$", round((0.60*a),2))
elif((b=="R") and (a<=5000)):
	print("Valor total: R$", round((0.55*a),2))
elif((b=="R") and (a>5000)):
	print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.140493
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:51:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- ERROR:
File "XXXX", line 7
    if((b=="R") or (b=="I") or (b=="C") and (a>0):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0))
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- ERROR:
File "XXXX", line 7
    if((b=="R") or (b=="I") or (b=="C") and (a>0))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:52:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- EXECUTION TIME:
0.128501
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- EXECUTION TIME:
0.208807
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
	else:
		print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:54:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
		print("Dados invalidos")



-- EXECUTION TIME:
0.13516
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.142404
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:55:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:55:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:56:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") or (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:56:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") or (b=="I") or (b=="C") or (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.23779
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:56:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (b=="I") and (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.188667
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:56:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (b=="I") and (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.210857
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:00:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (b=="I") and (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:00:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (b=="I") and (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:01:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()
print("Entradas:", a, "kWh", "e", "tipo", b)
if((b=="R") and (b=="I") and (b=="C") and (a>0)):
	if((b=="R") and (a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	elif((b=="R") and (a>500)):
		print("Valor total: R$", "Valor total: R$", round((0.65*a),2))
	elif((b=="C") and (a<=1000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="C") and (a>1000)):
		print("Valor total: R$", round((0.60*a),2))
	elif((b=="R") and (a<=5000)):
		print("Valor total: R$", round((0.55*a),2))
	elif((b=="R") and (a>5000)):
		print("Valor total: R$", round((0.60*a),2))
else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:12:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if((b=="R" and a>=0)):
	if((a<=500)):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif((b=="C" and a>=0))
	if((a<=1000)):
		print("Valor total: R$", "Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))
		
elif((b=="C") and (a>=0)):
	if(a<=5000):
		print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.149884
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 14
    elif((b=="C" and a>=0))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:13:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0)
	if(a<=1000):
		print("Valor total: R$", "Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 14
    elif(b=="C" and a>=0)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:13:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", "Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 22
    print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:14:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", "Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
	else:
		print("Valor total: R$", "Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 22
    print("Valor total: R$", "Valor total: R$", round((0.0.55*a),2))
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:16:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", a, "kWh", round((0.0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.21327
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 22
    print("Valor total: R$", a, "kWh", round((0.0.55*a),2))
                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:16:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", a, "kWh", round((0.0.55*a),2))
	else:
		print("Valor total: R$", a, round((0.60*a),2))

else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 22
    print("Valor total: R$", a, "kWh", round((0.0.55*a),2))
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:17:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", round((0.0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- ERROR:
File "XXXX", line 22
    print("Valor total: R$", round((0.0.55*a),2))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:19:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("consumo de energia: "))
b = input("tipo de instalacao: ").upper()

print("Entradas:", a, "kWh", "e", "tipo", b)

if(b=="R" and a>=0):
	if(a<=500):
		print("Valor total: R$", round((0.44*a),2))
	else:
		print("Valor total: R$", round((0.65*a),2))
elif(b=="C" and a>=0):
	if(a<=1000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))
		
elif(b=="C") and (a>=0):
	if(a<=5000):
		print("Valor total: R$", round((0.55*a),2))
	else:
		print("Valor total: R$", round((0.60*a),2))

else:
	print("Dados invalidos")



-- EXECUTION TIME:
0.132845
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
